RESOLVED FIXED122506
[GTK] Leak: GdkEvent retured by gtk_get_current_event is not freed.
https://bugs.webkit.org/show_bug.cgi?id=122506
Summary [GTK] Leak: GdkEvent retured by gtk_get_current_event is not freed.
ChangSeok Oh
Reported 2013-10-08 09:24:30 PDT
The leak exists in only WK1.
Attachments
Patch (2.04 KB, patch)
2013-10-08 09:29 PDT, ChangSeok Oh
no flags
ChangSeok Oh
Comment 1 2013-10-08 09:29:07 PDT
Gustavo Noronha (kov)
Comment 2 2013-10-08 09:46:27 PDT
Comment on attachment 213694 [details] Patch Good catch!
WebKit Commit Bot
Comment 3 2013-10-08 11:23:48 PDT
Comment on attachment 213694 [details] Patch Clearing flags on attachment: 213694 Committed r157124: <http://trac.webkit.org/changeset/157124>
WebKit Commit Bot
Comment 4 2013-10-08 11:23:50 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.