[GTK] Leak: GdkEvent retured by gtk_get_current_event is not freed. https://bugs.webkit.org/show_bug.cgi?id=122506

Reviewed by Gustavo Noronha Silva.

Gdk event returned by gtk_get_current_event should be freed after using it.

No functionality changed.

* platform/gtk/PopupMenuGtk.cpp:
(WebCore::PopupMenuGtk::show):


Canonical link: https://commits.webkit.org/140593@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157124 268f45cc-cd09-0410-ab3c-d52691b4dbfc